tools/tests/errors/surf_type_11.ki
# type/operator: an unhashable Dict cannot be a Set element
var st = {{1: 2}, 3}
discard st
